--- a/Ficha.html
+++ b/Ficha.html
@@ -44,10 +44,7 @@
         <h1>CURSOS COMPLEMENTARES:</h1>
 
         <h3>2026 - Formação em técnico em Desenvolvimento de sistemas <br>
-           2027 - Administração <br>
-           2028 - Astrologia<br>
-           2029 - Ciência da Computação<br>
-           2030 - Filosofia<br> </h3>
+           2029 - Ciência da Computação<br> </h3>
 
            <h1>▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬</h1>
            <h1>HABILIDADES:</h1>
